<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_color_primary_container"
    tools:context=".presentation.catalogdetail.DetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_container">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:paddingBottom="8dp">

            <ImageView
                android:id="@+id/iv_image_catalog"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:scaleType="centerCrop"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars" />

            <ImageView
                android:id="@+id/iv_back_btn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/ic_back_btn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/catalog_header_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/app_color_primary"
                android:padding="16dp"
                app:layout_constraintTop_toBottomOf="@id/iv_image_catalog">

                <TextView
                    android:id="@+id/tv_catalog_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_name"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/app_color_on_primary"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_catalog_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_price"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/app_color_on_primary"
                    app:layout_constraintBottom_toBottomOf="@id/tv_catalog_name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/tv_catalog_name" />

                <TextView
                    android:id="@+id/tv_catalog_desc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/menu_desc"
                    android:textSize="12sp"
                    android:textColor="@color/app_color_on_primary"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_catalog_name" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/catalog_location_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/app_color_primary"
                android:paddingHorizontal="16dp"
                android:paddingTop="16dp"
                android:paddingBottom="50dp"
                app:layout_constraintTop_toBottomOf="@id/catalog_header_container">

                <ImageView
                    android:id="@+id/iv_store_place"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_store"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_location"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/location_header"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/app_color_on_primary"
                    app:layout_constraintBottom_toBottomOf="@id/iv_store_place"
                    app:layout_constraintStart_toEndOf="@id/iv_store_place"
                    app:layout_constraintTop_toTopOf="@id/iv_store_place" />

                <TextView
                    android:id="@+id/tv_catalog_location"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/text_location"
                    android:textSize="12sp"
                    android:textColor="@color/app_color_on_primary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/tv_location"
                    app:layout_constraintTop_toBottomOf="@id/tv_location" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btn_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_color_primary"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_orange_header"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/tv_btn_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_add_to_cart_text"
                android:textColor="@color/app_color_primary"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@id/btn">

            <ImageView
                android:id="@+id/iv_minus_btn"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_minus"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tv_nominal"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_nominal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="16dp"
                android:text="@string/nominal"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/app_color_on_primary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_plus_btn"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_plus"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_nominal"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>